--- a/o2.html
+++ b/o2.html
@@ -21,6 +21,7 @@
     <a class="active" href="index.html"><b>Wstęp</b></a>
     <a href="w1.html"><b>Warzywa</b></a>
 	<a href="o2.html"><b>Owoce</b></a>
+	<a href="kik.html"><b>Kółko i krzyżyk</b></a>
 </div>
 
 <ul class="sidenav">
